feat: add show column to catalogs.banks, implement public GetBanks endpoint and update swagger
