# docs/swagger.yaml
@@ -10,6 +10,19 @@ definitions:
       track_code:
         type: string
     type: object
+  github_com_aaron_sakoo-backend_internal_api_response.APIResponse-array_github_com_aaron_sakoo-backend_internal_domain_Bank:
+    properties:
+      code:
+        type: integer
+      data:
+        items:
+          $ref: '#/definitions/github_com_aaron_sakoo-backend_internal_domain.Bank'
+        type: array
+      message:
+        type: string
+      track_code:
+        type: string
+    type: object
   github_com_aaron_sakoo-backend_internal_api_response.APIResponse-array_github_com_aaron_sakoo-backend_internal_domain_Banner:
     properties:
       code:
@@ -263,6 +276,19 @@ definitions:
     properties:
       token:
         type: string
+    type: object
+  github_com_aaron_sakoo-backend_internal_domain.Bank:
+    properties:
+      code:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      show:
+        type: boolean
     type: object
   github_com_aaron_sakoo-backend_internal_domain.BankAccount:
     properties:
@@ -1274,6 +1300,19 @@ paths:
       summary: Obtener banners activos
       tags:
       - Banners
+  /api/v1/catalogs/banks:
+    get:
+      description: Retorna una lista de bancos registrados en el sistema.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Error interno del servidor
+          schema:
+            $ref: '#/definitions/github_com_aaron_sakoo-backend_internal_api_response.APIResponse-any'
+      summary: Obtener catálogo de bancos
+      tags:
+      - Catálogos
   /api/v1/catalogs/currencies:
     get:
       description: Retorna una lista de monedas registradas en el sistema.
