# internal/infrastructure/repository/catalog.go
@@ -93,3 +93,40 @@ func (r *catalogRepository) GetCurrencies(ctx context.Context) ([]domain.Currenc
 
 	return currencies, nil
 }
+
+func (r *catalogRepository) GetBanks(ctx context.Context) ([]domain.Bank, error) {
+	dbCtx, cancel := context.WithTimeout(ctx, 5*time.Second)
+	defer cancel()
+
+	slog.Debug("Recuperando bancos de la base de datos")
+
+	query := `
+		SELECT id, code, name, show, created_at
+		FROM catalogs.banks
+		WHERE show = TRUE
+		ORDER BY code ASC;
+	`
+	rows, err := r.db.Query(dbCtx, query)
+	if err != nil {
+		slog.Error("Fallo al listar bancos en catalogs", "error", err)
+		return nil, fmt.Errorf("error al listar bancos: %w", err)
+	}
+	defer rows.Close()
+
+	var banks []domain.Bank
+	for rows.Next() {
+		var b domain.Bank
+		err := rows.Scan(&b.ID, &b.Code, &b.Name, &b.Show, &b.CreatedAt)
+		if err != nil {
+			slog.Error("Error al escanear fila de banco", "error", err)
+			return nil, fmt.Errorf("error al decodificar banco: %w", err)
+		}
+		banks = append(banks, b)
+	}
+
+	if banks == nil {
+		banks = []domain.Bank{}
+	}
+
+	return banks, nil
+}
